--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.6.0",
+    "express-session": "^1.14.2",
     "style-loader": "^0.13.1",
+    "thenify": "^3.2.1",
     "webpack": "^1.13.3",
     "webpack-dev-middleware": "^1.8.4",
     "webpack-hot-middleware": "^2.13.2"
